--- a/k8s/photoprism/ingress.yaml
+++ b/k8s/photoprism/ingress.yaml
@@ -1,8 +1,8 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: speedtest
-  namespace: speedtest
+  name: photoprism
+  namespace: photoprism
   annotations:
     cert-manager.io/cluster-issuer: "letsencrypt-prod"
 spec:
