--- a/k8s/homepage/deployment.yaml
+++ b/k8s/homepage/deployment.yaml
@@ -20,8 +20,11 @@ spec:
       enableServiceLinks: true
       containers:
         - name: homepage
-          image: "ghcr.io/gethomepage/homepage:v0.9.6"
+          image: "ghcr.io/gethomepage/homepage:v1.2.0"
           imagePullPolicy: Always
+          env:
+            - name: HOMEPAGE_ALLOWED_HOSTS
+              value: dashboard.local.koryalbert.net
           ports:
             - name: http
               containerPort: 3000
