--- a/k8s/jellystat/deployment.yaml
+++ b/k8s/jellystat/deployment.yaml
@@ -31,6 +31,11 @@ spec:
             timeoutSeconds: 1
             periodSeconds: 10
             failureThreshold: 3
+          readinessProbe:
+            tcpSocket:
+              port: 3000
+            initialDelaySeconds: 15
+            periodSeconds: 10
           ports:
             - containerPort: 3000
           env:
