cloudpg, gateway api, namespace upgrade

--- a/k8s/jellystat/pvc.yaml
+++ b/k8s/jellystat/pvc.yaml
@@ -2,10 +2,9 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: jellystat-data-pvc
-  namespace: jellystat
+  namespace: jelly
 spec:
-  storageClassName: longhorn
-  volumeName: jellystat-data
+  storageClassName: longhorn-xfs
   accessModes:
     - ReadWriteMany
   resources:
