--- a/k8s/jellystat/deployment.yaml
+++ b/k8s/jellystat/deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: jellystat
-  namespace: jellystat
+  namespace: jelly
 spec:
   selector:
     matchLabels:
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: jellystat
-          image: cyfershepard/jellystat:1.1.3
+          image: cyfershepard/jellystat:1.1.6
           imagePullPolicy: IfNotPresent
           resources:
             requests:
@@ -40,15 +40,24 @@ spec:
             - containerPort: 3000
           env:
             - name: POSTGRES_DB
-              value: "jfstat"
+              valueFrom:
+                secretKeyRef:
+                  name: pgcluster-jellystat-app
+                  key: dbname
             - name: POSTGRES_USER
-              value: "postgres"
+              valueFrom:
+                secretKeyRef:
+                  name: pgcluster-jellystat-app
+                  key: username
             - name: POSTGRES_PASSWORD
-              value: "mypassword"
+              valueFrom:
+                secretKeyRef:
+                  name: pgcluster-jellystat-app
+                  key: password
             - name: POSTGRES_PORT
               value: "5432"
             - name: POSTGRES_IP
-              value: "jellystat-db"
+              value: "pgcluster-jellystat-rw"
             - name: JWT_SECRET
               value: "my-secret-jwt-key"
           volumeMounts:
