--- a/k8s/jellystat/ingress.yaml
+++ b/k8s/jellystat/ingress.yaml
@@ -2,7 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: jellystat
-  namespace: jellystat
+  namespace: jelly
   annotations:
     cert-manager.io/cluster-issuer: "letsencrypt-prod"
 spec:
