changes to longhorn storage class

--- a/k8s/arr/pvc.yaml
+++ b/k8s/arr/pvc.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   accessModes:
     - ReadWriteMany
-  storageClassName: longhorn
+  storageClassName: longhorn-xfs
   resources:
     requests:
       storage: 3Gi
