Updated version, ingress needed temporarily

--- a/k8s/codeprojectai/deployment.yaml
+++ b/k8s/codeprojectai/deployment.yaml
@@ -30,7 +30,7 @@ spec:
                   - "true"
       containers:
       - name: codeproject-ai
-        image: codeproject/ai-server:gpu
+        image: codeproject/ai-server:cuda12_2-2.9.5
         ports:
         - containerPort: 32168
         resources:
