--- a/k8s/arr/jellyseerr/pvc.yaml
+++ b/k8s/arr/jellyseerr/pvc.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: jellyfin-config-pvc
-  namespace: jelly
+  name: jellyseerr-data-pvc
+  namespace: arr
 spec:
-  storageClassName: longhorn-xfs
   accessModes:
     - ReadWriteMany
+  storageClassName: longhorn
   resources:
     requests:
-      storage: 15Gi
+      storage: 100Mi
