--- a/k8s/speedtest/statefulset.yaml
+++ b/k8s/speedtest/statefulset.yaml
@@ -44,4 +44,4 @@ spec:
       volumes:
         - name: postgres
           persistentVolumeClaim:
-            claimName: speedtest-db-pvc
+            claimName: speedtest-db-nfs-pvc
