--- a/k8s/jenkins/pvc.yaml
+++ b/k8s/jenkins/pvc.yaml
@@ -1,13 +1,12 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: jenkins-app-pvc
+  name: jenkins-pvc
   namespace: jenkins
 spec:
   accessModes:
     - ReadWriteMany
-  storageClassName: longhorn
-  volumeName: jenkins-app
+  storageClassName: nfs-client
   resources:
     requests:
       storage: 700Mi
