--- a/k8s/cookbook-tandoor/deployment.yaml
+++ b/k8s/cookbook-tandoor/deployment.yaml
@@ -88,7 +88,7 @@ spec:
       volumes:
         - name: cookbook-config
           persistentVolumeClaim:
-            claimName: cookbook-app-pvc
+            claimName: cookbook-app-nfs-pvc
         - name: nginx-config
           configMap:
             name: cookbook-configmap
@@ -134,7 +134,7 @@ spec:
       volumes:
         - name: cookbook-config
           persistentVolumeClaim:
-            claimName: cookbook-app-pvc
+            claimName: cookbook-app-nfs-pvc
         - name: nginx-config
           configMap:
             name: cookbook-configmap
