--- a/k8s/cookbook-tandoor/statefulset.yaml
+++ b/k8s/cookbook-tandoor/statefulset.yaml
@@ -46,4 +46,4 @@ spec:
       volumes:
         - name: cookbook-db-data
           persistentVolumeClaim:
-            claimName: cookbook-db-pvc
+            claimName: cookbook-db-nfs-pvc
