--- a/k8s/grafana/deployment.yaml
+++ b/k8s/grafana/deployment.yaml
@@ -50,4 +50,4 @@ spec:
       volumes:
         - name: grafana-data
           persistentVolumeClaim:
-            claimName: grafana-data-pvc
+            claimName: grafana-data-nfs-pvc
