--- a/k8s/grafana/pvc.yaml
+++ b/k8s/grafana/pvc.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: grafana-data-pvc
+  name: grafana-data-nfs-pvc
   namespace: grafana
 spec:
-  storageClassName: longhorn
+  storageClassName: nfs-client
   accessModes:
     - ReadWriteMany
   resources:
