--- a/k8s/jellystat/deployment.yaml
+++ b/k8s/jellystat/deployment.yaml
@@ -66,4 +66,4 @@ spec:
       volumes:
         - name: jellystat-data
           persistentVolumeClaim:
-            claimName: jellystat-data-pvc
+            claimName: jellystat-pvc
