--- a/k8s/cookbook-tandoor/pvc.yaml
+++ b/k8s/cookbook-tandoor/pvc.yaml
@@ -1,13 +1,12 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: cookbook-db-pvc
+  name: cookbook-db-nfs-pvc
   namespace: "cookbook"
 spec:
   accessModes:
     - ReadWriteMany
-  storageClassName: longhorn
-  volumeName: cookbook-db
+  storageClassName: nfs-client
   resources:
     requests:
       storage: 2Gi
@@ -15,13 +14,12 @@ spec:
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: cookbook-app-pvc
+  name: cookbook-app-nfs-pvc
   namespace: "cookbook"
 spec:
   accessModes:
     - ReadWriteMany
-  storageClassName: longhorn
-  volumeName: cookbook-app
+  storageClassName: nfs-client
   resources:
     requests:
       storage: 1Gi
