--- a/k8s/jellystat/pvc.yaml
+++ b/k8s/jellystat/pvc.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: jellystat-data-pvc
+  name: jellystat-pvc
   namespace: jelly
 spec:
-  storageClassName: longhorn-xfs
+  storageClassName: nfs-client
   accessModes:
     - ReadWriteMany
   resources:
