--- a/k8s/arr/bazarr/deployment.yaml
+++ b/k8s/arr/bazarr/deployment.yaml
@@ -59,7 +59,7 @@ spec:
           path: /mnt/tank/media/Movies
       - name: config
         persistentVolumeClaim:
-          claimName: bazarr-config-pvc
+          claimName: bazarr-config-nfs-pvc
       - name: tv
         nfs:
           server: 192.168.2.254
