--- a/k8s/actualbudget/deployment.yaml
+++ b/k8s/actualbudget/deployment.yaml
@@ -30,4 +30,4 @@ spec:
       volumes:
         - name: data
           persistentVolumeClaim:
-            claimName: actual-budget-pvc
+            claimName: actual-budget-nfs-pvc
