--- a/k8s/actualbudget/pvc.yaml
+++ b/k8s/actualbudget/pvc.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: actual-budget-pvc
+  name: actual-budget-nfs-pvc
   namespace: actualbudget
 spec:
   accessModes:
     - ReadWriteMany
-  storageClassName: longhorn-xfs
+  storageClassName: nfs-client
   resources:
     requests:
       storage: 2Gi
