--- a/k8s/ispydvr/deployment.yaml
+++ b/k8s/ispydvr/deployment.yaml
@@ -47,7 +47,7 @@ spec:
       volumes:
       - name: config-volume
         persistentVolumeClaim:
-          claimName: ispyagentdvr-config-pvc
+          claimName: ispyagentdvr-config-nfs-pvc
       - name: media-volume
         nfs:
           server: 192.168.2.254
