--- a/k8s/ghost/deployment.yaml
+++ b/k8s/ghost/deployment.yaml
@@ -64,4 +64,4 @@ spec:
       volumes:
         - name: ghost-data
           persistentVolumeClaim:
-            claimName: ghost-app-pvc
+            claimName: ghost-app-nfs-pvc
