--- a/k8s/influxdb/deployment.yaml
+++ b/k8s/influxdb/deployment.yaml
@@ -32,4 +32,4 @@ spec:
       volumes:
       - name: data
         persistentVolumeClaim:
-          claimName: influxdb-data
+          claimName: influxdb-nfs-data
