--- a/k8s/influxdb/pvc.yaml
+++ b/k8s/influxdb/pvc.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: influxdb-data
+  name: influxdb-nfs-data
   namespace: kube-prometheus-stack
 spec:
   accessModes:
     - ReadWriteMany
-  storageClassName: longhorn-xfs
+  storageClassName: nfs-client
   resources:
     requests:
       storage: 1Gi
