--- a/k8s/ollama/deployment.yaml
+++ b/k8s/ollama/deployment.yaml
@@ -28,7 +28,7 @@ spec:
                   - "true"
       containers:
       - name: ollama
-        image: ollama/ollama:0.3.5
+        image: ollama/ollama:0.12.9
         volumeMounts:
           - mountPath: /root/.ollama
             name: ollama-storage
@@ -43,7 +43,7 @@ spec:
           protocol: TCP
         env:
         - name: PRELOAD_MODELS
-          value: "gemma2"
+          value: "deepseek-coder-v2:16b"
         - name: OLLAMA_KEEP_ALIVE
           value: "12h"
         lifecycle:
@@ -53,4 +53,4 @@ spec:
       volumes:
       - name: ollama-storage
         persistentVolumeClaim:
-            claimName: ollama-models
+            claimName: ollama-models-pvc
