--- a/k8s/ollama/pvc.yaml
+++ b/k8s/ollama/pvc.yaml
@@ -1,13 +1,12 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: webui-storage-pvc
+  name: ollama-models-pvc
   namespace: ollama
 spec:
-  storageClassName: longhorn
-  volumeName: openwebui-storage
+  storageClassName: nfs-client
   accessModes:
     - ReadWriteMany
   resources:
     requests:
-      storage: 10Gi
+      storage: 50Gi
